--- a/print.css
+++ b/print.css
@@ -41,6 +41,7 @@ td {
 }
 
 .order-record p {
+    margin: 0;
     text-align: center;
 }
 
@@ -48,7 +49,7 @@ td {
     margin-right: 15px;
 }
 
-.order-record .order-date {
+.order-record .date {
     position: relative;
     left: 100px;
 }
