--- a/print.css
+++ b/print.css
@@ -41,7 +41,7 @@ td {
 }
 
 .order-record p {
-    margin: 0;
+    margin: 0 0 0 -50px;
     text-align: center;
 }
 
@@ -51,5 +51,5 @@ td {
 
 .order-record .date {
     position: relative;
-    left: 100px;
+    left: 50px;
 }
